Fix Nav spacing

--- a/profile-app/src/App.css
+++ b/profile-app/src/App.css
@@ -41,10 +41,10 @@ img {
 
 .Nav {
   background-color: #9e3737;
-  height: 4%;
+  height: 5%;
   display: flex;
   justify-content: space-evenly;
-  position: fixed; /* Set the navbar to fixed position */
+  position:sticky; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%;
 }
